crates/reinhardt-pages/tests/ui/page/fail/macro_unknown.stderr
error: cannot find macro `unknown_macro` in this scope
  --> tests/ui/page/fail/macro_unknown.rs:11:9
   |
11 |             src: unknown_macro!("test.png"),
   |                  ^^^^^^^^^^^^^
